[project]
name = "hrl-tl"
version = "0.1.0"
description = "HRL with subpolicies trained with explainable TL rewards"
authors = [{ name = "Mikihisa Yuasa", email = "myuasa2@illinois.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "spottl (>=2.11.6,<3.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.19.11,<0.20.0)",
    "torch (>=2.7.0,<3.0.0)",
    "gym-multigrid @ git+https://github.com/LIRA-illinois/gym-multigrid@dev",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
